Fix chat message overflow issue in safari

--- a/assets/src/App.css
+++ b/assets/src/App.css
@@ -30,6 +30,7 @@ body {
 
 .Text--markdown {
   overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 .Text--markdown a {
